--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,47 @@
 ---
-
+import "../styles/global.css";
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <meta name="viewport" content="width=device-width" />
+        <meta name="generator" content={Astro.generator} />
+        <title>Noise Nest</title>
+    </head>
+    <body>
+        <h1 class="text-center text-3xl font-bold py-2">Noise Nest</h1>
+        <main class="container border mx-auto p-4 space-y-4">
+            <div class="flex flex-col items-center gap-2">
+                <label for="rain-slider"
+                    ><img src="/assets/icons/rain.png" /></label
+                >
+                <input
+                    type="range"
+                    id="rain-slider"
+                    min="0"
+                    max="100"
+                    value="50"
+                    class="w-full"
+                />
+            </div>
+
+            <div class="flex flex-col items-center gap-2">
+                <label for="forest-bird-slider"
+                    ><img src="/assets/icons/bird.png" /></label
+                >
+                <input
+                    type="range"
+                    id="forest-bird-slider"
+                    min="0"
+                    max="100"
+                    value="50"
+                    class="w-full"
+                />
+            </div>
+        </main>
+    </body>
+
+    <script type="module" src="/src/scripts/index.ts"></script>
 </html>
