added power button

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,6 +40,15 @@ import "../styles/global.css";
                     class="w-full"
                 />
             </div>
+            <div class="flex flex-col items-center gap-2">
+                <button id="power" class="active:scale-95"
+                    ><img
+                        src="/assets/icons/power-on.png"
+                        class="shadow-lg rounded-full p-1"
+                    /></button
+                >
+                <label for="power">Power On</label>
+            </div>
         </main>
     </body>
 
