added power button

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,5 +52,5 @@ import "../styles/global.css";
         </main>
     </body>
 
-    <script type="module" src="/src/scripts/index.ts"></script>
+    <script src="../scripts/index.ts"></script>
 </html>
