--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import "../styles/global.css";
     </head>
     <body>
         <h1 class="text-center text-3xl font-bold py-2">Noise Nest</h1>
-        <main class="container border mx-auto p-4 space-y-4">
+        <main class="max-w-2xl mx-auto p-4 space-y-4">
             <div class="flex flex-col items-center gap-2">
                 <label for="rain-slider"
                     ><img src="/assets/icons/rain.png" /></label
@@ -53,7 +53,36 @@ import "../styles/global.css";
                     class="w-full"
                 />
             </div>
+
             <div class="flex flex-col items-center gap-2">
+                <label for="campfire-slider"
+                    ><img src="/assets/icons/campfire.png" /></label
+                >
+                <input
+                    type="range"
+                    id="campfire-slider"
+                    min="0"
+                    max="100"
+                    value="50"
+                    class="w-full"
+                />
+            </div>
+
+            <div class="flex flex-col items-center gap-2">
+                <label for="wolf-slider"
+                    ><img src="/assets/icons/wolf.png" /></label
+                >
+                <input
+                    type="range"
+                    id="wolf-slider"
+                    min="0"
+                    max="100"
+                    value="50"
+                    class="w-full"
+                />
+            </div>
+
+            <div class="flex flex-col items-center gap-2 mt-8">
                 <button id="power" class="active:scale-95"
                     ><img
                         src="/assets/icons/power-on.png"
